unpackaged/main/default/objects/n2de__Tag_Cap__c/n2de__Tag_Cap__c.object-meta.xml
<CustomObject>
    <label>Tag Cap</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tag Caps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>