unpackaged/main/default/objects/n2de__Tag_Cap__c/fields/n2de__Capping_pattern__c.field-meta.xml
<CustomField>
    <fullName>n2de__Capping_pattern__c</fullName>
    <label>Capping Pattern</label>
    <referenceTo>n2de__Capping_Pattern__c</referenceTo>
    <relationshipLabel>Tag Caps</relationshipLabel>
    <relationshipName>Tag_Caps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>