unpackaged/main/default/objects/n2de__Tag_Cap__c/fields/n2de__Tag_caps_json__c.field-meta.xml
<CustomField>
    <fullName>n2de__Tag_caps_json__c</fullName>
    <description>JSON data of tag cap values for duration</description>
    <label>Tag cap values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>