unpackaged/main/default/objects/n2de__Tag_Cap__c/fields/n2de__Tag_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Tag_value__c</fullName>
    <label>Tag value</label>
    <referenceTo>n2de__Tag_Value__c</referenceTo>
    <relationshipLabel>Tag Caps</relationshipLabel>
    <relationshipName>Tag_Caps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>